// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Nav IconsOnly renders 1`] = `
<Fragment>
  <h2
    id="nav-tablet"
  >
    Icons only
  </h2>
  <p>
    To display only icons use class 
    <code
      className="token property"
    >
      .nav-
      {desired_size}
      -vertical
    </code>
    .  
    <code
      className="token property"
    >
      .nav-
      {desired_size}
      -vertical
    </code>
     works just like in the standard example. In this mode it is possible to display another level of items.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Nav
      items={
        Array [
          Object {
            "icon": "home",
            "name": "Home",
          },
          Object {
            "icon": "shopping_cart",
            "name": "Transactions",
            "subItems": Array [
              "Purchase history",
              "Invoice",
            ],
          },
          Object {
            "icon": "notification_important",
            "name": "Notifications",
          },
          Object {
            "icon": "language",
            "name": "Language",
          },
          Object {
            "icon": "account_balance",
            "name": "Account",
            "subItems": Array [
              "Email",
              "Information",
              "Other things",
            ],
          },
        ]
      }
      vertsize="md"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Component: Nav Mix renders 1`] = `
<Fragment>
  <h2
    id="nav-mix"
  >
    Tablet and wide
  </h2>
  <p>
    You can also use both icons only and wide together.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Nav
      items={
        Array [
          Object {
            "icon": "home",
            "name": "Home",
          },
          Object {
            "icon": "shopping_cart",
            "name": "Transactions",
            "subItems": Array [
              "Purchase history",
              "Invoice",
            ],
          },
          Object {
            "icon": "notification_important",
            "name": "Notifications",
          },
          Object {
            "icon": "language",
            "name": "Language",
          },
          Object {
            "icon": "account_balance",
            "name": "Account",
            "subItems": Array [
              "Email",
              "Information",
              "Other things",
            ],
          },
        ]
      }
      vertsize="md"
      widesize="lg"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Component: Nav Mobile renders 1`] = `
<Fragment>
  <h2
    id="nav-mobile"
  >
    Mobile nav
  </h2>
  <p>
    To only display mobile view use class 
    <code
      className="token property"
    >
      .nav
    </code>
     alone.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Nav
      items={
        Array [
          Object {
            "icon": "home",
            "name": "Home",
          },
          Object {
            "icon": "shopping_cart",
            "name": "Transactions",
          },
          Object {
            "icon": "notification_important",
            "name": "Notifications",
          },
          Object {
            "icon": "language",
            "name": "Language",
          },
          Object {
            "icon": "account_balance",
            "name": "Account",
          },
          Object {
            "icon": "fingerprint",
            "name": "Authentication",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Component: Nav NavText renders 1`] = `
<div
  className="col-md-12 col-lg-10 doc-body"
>
  <ExperimentalComponentAlert />
  <p
    className="lead"
  >
    Sidebars.
  </p>
  <StandardNav />
  <TwoLevels />
  <IconsOnly />
  <Mix />
  <Mobile />
</div>
`;

exports[`Component: Nav StandardNav renders 1`] = `
<Fragment>
  <h2
    id="nav-standard"
  >
    Standard nav
  </h2>
  <p>
    Add class 
    <code
      className="token property"
    >
      .nav
    </code>
     and 
    <code
      className="token property"
    >
      .nav-
      {desired_size}
      -vertical-wide
    </code>
     to a nav containing an 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;ul&gt;
    </PrismCode>
     to get a standard nav. Add 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;i&gt;
    </PrismCode>
     and 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;span&gt;
    </PrismCode>
     with your desired 
    <Link
      replace={false}
      to="/docs/core/icons"
    >
      icon
    </Link>
     and text. 
    <code
      className="token property"
    >
      .nav-
      {desired_size}
      -vertical-wide
    </code>
     determines when your nav will switch from mobile view to vertical. If you have more than five icons then the first four icons will be the only visible ones in mobile view.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Nav
      items={
        Array [
          Object {
            "icon": "home",
            "name": "Home",
          },
          Object {
            "icon": "shopping_cart",
            "name": "Transactions",
          },
          Object {
            "icon": "notification_important",
            "name": "Notifications",
          },
          Object {
            "icon": "language",
            "name": "Language",
          },
          Object {
            "icon": "account_balance",
            "name": "Account",
          },
          Object {
            "icon": "fingerprint",
            "name": "Authentication",
          },
        ]
      }
      widesize="lg"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Component: Nav TwoLevels renders 1`] = `
<Fragment>
  <h2
    id="nav-twolevels"
  >
    Two levels
  </h2>
  <p>
    You can also display another level of items in the standard nav. Just nest a 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;div&gt;
    </PrismCode>
     with class 
    <code
      className="token property"
    >
      .submenu
    </code>
     containing an icon and text like the standard nav and add a new 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;ul&gt;
    </PrismCode>
     with 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;li&gt;
    </PrismCode>
     items. This level does not use icons. List items containing another level are not visible in responsive mode, they will be displayed when the items are expanded.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Nav
      items={
        Array [
          Object {
            "icon": "home",
            "name": "Home",
          },
          Object {
            "icon": "shopping_cart",
            "name": "Transactions",
            "subItems": Array [
              "Purchase history",
              "Invoice",
            ],
          },
          Object {
            "icon": "notification_important",
            "name": "Notifications",
          },
          Object {
            "icon": "language",
            "name": "Language",
          },
          Object {
            "icon": "account_balance",
            "name": "Account",
            "subItems": Array [
              "Email",
              "Information",
              "Other things",
            ],
          },
        ]
      }
      widesize="lg"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Component: Nav renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <NavText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;

exports[`Component: Nav runs init on rerender 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <NavText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
